2006-07-19  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: More parameter types added.
        
        * gimp-lib/rubyfu.rb: Added RubyFu::ParamDef subtypes. Connected the
          dialog code to run for interactive mode.
        
        * plug-ins/test.rb: Added more parameter types to the dialog test
          procedure.
          
2006-07-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	* ext/rbgimpdialog.c: Added missing declaration for mRubyFu.

2006-07-18  Scott Lembcke <lemb0029@gnome.org>

        * ext/Makefile.am: Added ext/rbgimpdialog.c.
        
        * Added ext/rbgimpdialog.c.
        
        * ext/conversion.c: Removed some stray blank lines.
        
        * ext/rbgimp.c: Added a call to initialize the dialog code.
        
        * ext/rbgimp.h: Added the dialog init function prototype.
        
        * plug-ins/test.rb: Added a procedure to run the dialog.
        
2006-07-10  Scott Lembcke <lemb0029@gnome.org>

        * ext/*.c: Style fixes. Swapped stdlib functions for glib ones.
        
2006-07-08  Scott Lembcke <lemb0029@gnome.org>

        * Added plug-in/test.rb.
        
        * gimp-lib/gimp_oo.rb: Complete re-implementation of gimp OO types.
        
        * gimp-lib/pdb.rb: Changed Exception handling to more closely mirror
          GIMP procedure errors. Added a verbose mode that echoes procedure 
          calls.
          
        * Removed plug-ins/hello.rb.
        
        * plug-ins/Makefile.am: Removed plug-ins/hello.rb.
        
        * gimp-lib/gimp.rb: Changes in error handling to reflect
          gimp-lib/pdb.rb.
        
2006-07-05  Scott Lembcke <lemb0029@gnome.org>

        * ext/conversion.c: Finished conversion for parasite parameters.
        
        * gimp-lib/gimp.rb: Changed error checking to accept parasite types.
        
        * ext/gimp.h: Added function prototypes for parasite conversion 
          functions.
          
        * gimp-lib/Makefile.am: Added test.rb.
        